--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "author": "",
-echo $this->Form->input('password');  "license": "ISC",
+"license": "ISC",
   "dependencies": {
     "handlebars": "^4.0.10"
   }
